fixed overflow

--- a/public/stylesheet/customstyle.css
+++ b/public/stylesheet/customstyle.css
@@ -7,6 +7,7 @@ body {
   max-height: 100%;
   color: #787E89;
   border-style: none;
+  overflow-x: hidden;
 
 }
 
